refactor: cstm-footer.liquid, password.liquid | non-blocking css of component-list-social.css

--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -189,7 +189,8 @@
 
     <link rel="preload" href="{{ 'base.css' | asset_url }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    {{ 'component-list-social.css' | asset_url | stylesheet_tag }}
+    <link rel="stylesheet" href="{{ 'component-list-social.css' | asset_url }}" media="print" onload="this.media='all'; this.onload=null;">
+
 
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'details-modal.js' | asset_url }}" defer="defer"></script>
