--- a/sections/cstm-footer.liquid
+++ b/sections/cstm-footer.liquid
@@ -3,7 +3,8 @@
 {{ 'component-newsletter.css' | asset_url | stylesheet_tag }}
 {{ 'component-list-menu.css' | asset_url | stylesheet_tag }}
 {{ 'component-list-payment.css' | asset_url | stylesheet_tag }}
-{{ 'component-list-social.css' | asset_url | stylesheet_tag }}
+
+<link rel="stylesheet" href="{{ 'component-list-social.css' | asset_url }}" media="print" onload="this.media='all'; this.onload=null;">
 
 
 {%- style -%}
@@ -307,6 +308,7 @@
     margin-top: 0;
     }
     }
+
 {%- endstyle -%}
 
 <script>
