--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -81,6 +81,7 @@
     }
     .homepage-banner-wrapper .homepage-bar-wrapper .homepage-bar .label img {
     width: 40px;
+    height: auto;
     }
     .product-items {
     display: grid;
