update: changes in css, files: assets/component-facets.css, snippets/product-media-modal.liquid

--- a/snippets/product-media-modal.liquid
+++ b/snippets/product-media-modal.liquid
@@ -327,7 +327,7 @@
     }
 
     .sp-zoom-img {
-        height: 600px;
+        max-height: 600px;
         object-fit: cover;
     }
 
@@ -396,6 +396,7 @@
         margin: 20px auto;
         overflow: auto;
         width: 80%;
+        padding-block: 5px;
     }
 
     .product-media-modal .product-modal-thumbnails::-webkit-scrollbar {
@@ -420,6 +421,7 @@
             max-width: 749px;
             margin: 20px auto 0;
             padding: 4px 0;
+            text-align: center;
         }
     }
 
